# cryptotrace-ml

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  USAGE.md  analysis.py  backup.sh  collect_data.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  graph_investigation.py  main.py  pyproject.toml  run-pipeline.sh  setup.py  test_multinetwork.py  update_risk_scores.py
data/raw/: bsc_transactions.json  solana_transactions.json  transaction.csv  transaction.json  transactions-db.json  wallet.csv  wallet.json  wallet_addresses-db.json
models/: isolation_forest.joblib  local_outlier_factor.joblib  scaler.joblib
notebooks/: graph.ipynb  main.ipynb  risk-scoring.ipynb
src/: config.py  dataset.py  db.py  features.py  graph_analysis.py  html_report.py  plots.py
src/modeling/: predict.py  train.py
src/services/: risk_engine.py
